tests/parser/validinput/termblock.idp
vocabulary V{
	type x
	C:x
}
term T : V{
	C
}
procedure main(){
	return 1	
}
